MYSQLEXCEL-74 - Some fields next to checkboxes should be automatically focused and selected
- Changed the PrimaryKeyColumnsComboBox combo box to be a drop-down instead, since it was letting users type anything which caused errors. (source\Forms\ExportDataForm.Designer.cs, source\Forms\ExportDataForm.resx)
- Added code to the AddPrimaryKeyRadioButton_CheckedChanged method to focus the AddPrimaryKeyTextBox field and select all its text when the AddPrimaryKeyRadioButton is checked. Added code to the UseExistingColumnRadioButton_CheckedChanged method to focus the PrimaryKeyColumnsComboBox drop-down when the UseExistingColumnRadioButton is checked. (source\Forms\ExportDataForm.cs)
- Added code to the RestoreSavedEditSessionsCheckBox_CheckedChanged method to focus the ReuseWorksheetsRadioButton radio button and select all its text when the RestoreSavedEditSessionsCheckBox is checked. (source\Forms\GlobalOptionsDialog.cs)
- Added code to the CreateExcelTableCheckbox_CheckedChanged method to focus the UseStyleComboBox drop-down  when the CreateExcelTableCheckbox is checked. Added code to the PrefixExcelTablesCheckBox_CheckedChanged method to focus the PrefixExcelTablesTextBox field and select all its text when the PrefixExcelTablesCheckBox is checked. (source\Forms\ImportAdvancedOptionsDialog.cs)
- Added code to the CreatePivotOrRelationshipsCheckedChanged method to focus the PivotTablesComboBox drop-down when the CreatePivotTableCheckBox is checked. (source\Forms\ImportMultipleDialog.cs)
- Added code to the LimitRowsCheckBox_CheckedChanged method to focus the RowsToReturnNumericUpDown field and select all its contents when the LimitRowsCheckBox is checked. (source\Forms\ImportTableViewForm.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 1.3.2
+- Automatically set the focus (and select all contents if possible) on controls directly related to a checkbox or radio button in all dialogs. This change affected the
+  following dialogs so when a checkbox or radio button is checked, its related control is set to have focus: Import Data, Import Multiple Data, Export Data, Global Options,
+  Import Advanced Options.
 - Enhanced the way the row with summary fields (inserted at the bottom of imported data when the "Add Summary Fields" option is checked) looks like, now it is formatted
   in bold with a thick border above it. This was done to make a visual difference between the data rows and the summary row, necessary mostly when handling numeric data
   (the summary row could be easily mistaken to be a normal data row).
