MYSQLEXCEL-75 - Edit Data - Import Data dialog should be replaced by Preview one or removed
- Added the new EditPreviewMySqlData setting to let users show / skip the Preview Data dialog when clicking on the Edit MySQL Data action label. By default it is true. (source\Properties\Settings.Designer.cs, source\Properties\Settings.settings, source\app.config)
- Added a new checkbox to the GlobalOptionsDialog to control the new EditPreviewMySqlData setting. (source\Forms\GlobalOptionsDialog.cs, source\Forms\GlobalOptionsDialog.Designer.cs, source\Forms\GlobalOptionsDialog.resx)
- Changed code in the EditTableData to show the Preview Data dialog when the new EditPreviewMySqlData setting is turned on, also now the ImportHidingDialog method of the ImportTableViewForm class is always called since the intention is to replace the Import dialog with the Preview one. Simplified the EditConnectionInfo method by changing its signature to receive only what the method needs. (source\Controls\ExcelAddInPane.cs)
- Added a new parameter to the PreviewDataDialog constructor to show/hide a Cancel button and added the InitializeDialogButtons method to do that. (source\Forms\PreviewDataDialog.cs, source\Forms\PreviewDataDialog.Designer.cs, source\Forms\PreviewDataDialog.resx, source\Forms\ImportMultipleDialog.cs)
- Added a new context-menu item to preview the data of a right-clicked Table or View shown in the DB Objects Selection panel. (source\Panels\DBObjectSelectionPanel.cs, source\Panels\DBObjectSelectionPanel.Designer.cs, source\Panels\DBObjectSelectionPanel.resx)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
 1.3.2
+- Added a new global option called "Preview MySQL table data before an Edit Data session is opened" that when checked, the data of a selected MySQL table to be edited
+  is shown in a preview dialog before the Edit Data session is opened. If the option is unchecked, no preview takes place and the Edit Data session is opened directly.
+- Added a new context menu option called "Preview Data" available when right-clicking a MySQL table or view listed in the DB Objects selection panel. The option opens
+  the Preview Data dialog and shows by default the first 10 rows of the selected table or view.
 - Automatically set the focus (and select all contents if possible) on controls directly related to a checkbox or radio button in all dialogs. This change affected the
   following dialogs so when a checkbox or radio button is checked, its related control is set to have focus: Import Data, Import Multiple Data, Export Data, Global Options,
   Import Advanced Options.
