--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+1.3.3
+- Changed all references of the Varchar string to VarChar in the code for consistency with the renaming done in 1.3.0.
+  (MySQL Bug #73712, Bug #19501346 - DATA TYPE INCONSISTENCIES BETWEEN VARCHAR (OLD) AND VARCHAR (NEW))
+
 1.3.2
 - Added a new global option called "Preview MySQL table data before an Edit Data session is opened" that when checked, the data of a selected MySQL table to be edited
   is shown in a preview dialog before the Edit Data session is opened. If the option is unchecked, no preview takes place and the Edit Data session is opened directly.
