MySQL Bug #73293, Bug #19403063 - EXPORT AND DECIMAL DELIMITER
- Created the GetColumnsSchemaInfo method to build schema information from the columns defined by the user in a MySqlDataTable (column properties for Export Data). Created a new constructor of the MySqlDataTable meant to be used in Export Data operations (to create the final table to be exported) that takes a template MySqlDataTable with user-defined columns and from it creates columns that have the user-defined columns. Created a new MySqlDataTable constructor meant to be used in Append Data operations (to create the final table to be appended). Added code to the CreateTableSchema method to consider unique keys besides primary ones, to add more extra information (like Excluded and AutoPK columns) and to subscribe each column's PropertyChanged event to the table's event delegate method. (source\Classes\MySqlDataTable.cs)
- Modified a MySqlDataColumn constructor's signature to receive a string with all key modifiers to set the UniqueKey property and to set the ExcludeColumn and AutoPk properties from the extraInfo parameter. Fixed code in the DetectMySqlDataType method to consistently use VarChar instead of Varchar when detecting data types, this fixes a cosmetic bug on the displayed types in the Export Data Dialog. (source\Classes\MySqlDataColumn.cs)
- Moved the code that assembles operation result information and shows it to the user from the ExportData method to the new AssembleAndShowOperationResults one. Changed code in the ExportData method to call the new MySqlDataTable constructor that takes another template MySqlDataTable instead of cloning the preview one. (source\Forms\ExportDataForm.cs)
- Moved the code that assembles operation result information and shows it to the user from the AppendData method to the new AssembleAndShowOperationResults one. Changed code in the InitializeTargetTableGrid method to call the new MySqlDataTable constructor added for Append Data operations. (source\Forms\AppendD

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 1.3.3
+- Fixed Export Data operations code to create a MySqlDataTable container for the data to be exported with the final data types before the operation takes place, this
+  automatically makes the decimal numbers conversion from any locale to an invariant one. (MySQL Bug #73293, Bug #19403063 - EXPORT AND DECIMAL DELIMITER)
 - Changed all references of the Varchar string to VarChar in the code for consistency with the renaming done in 1.3.0.
   (MySQL Bug #73712, Bug #19501346 - DATA TYPE INCONSISTENCIES BETWEEN VARCHAR (OLD) AND VARCHAR (NEW))
 
