--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -972,8 +972,8 @@ Do you want to exit Edit Mode on all Worksheets within the Workbook before savin
   <data name="PivotTableCreationError" xml:space="preserve">
     <value>An error ocurred trying to create the PivotTable {0}</value>
   </data>
-  <data name="RefreshDataError" xml:space="preserve">
-    <value>An error ocurred trying to refresh MySQL data in Excel table {0}</value>
+  <data name="ImportDataRefreshError" xml:space="preserve">
+    <value>An error ocurred trying to refresh MySQL data in Excel table {0}.</value>
   </data>
   <data name="ImportConnectionInfosMissingConnectionsDetail" xml:space="preserve">
     <value>Some Excel tables could not be reconnected to their corresponding MySQL databases because the connections could not be located.</value>
@@ -1053,6 +1053,8 @@ Since Excel relationships cannot be created, a single PivotTable for the whole E
   <data name="WorkbookSaveErrorText" xml:space="preserve">
     <value>There was an error saving the Excel workbook, please try again.</value>
   </data>
+  <data name="ImportDataBindError" xml:space="preserve">
+    <value>An error ocurred trying to bind MySQL data to Excel table {0}.</value>
   <data name="MySQLforExcel_WelcomePanel_Connection_Fabric" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\MySQLforExcel-WelcomePanel-Connection-Fabric.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
