--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -1055,6 +1055,7 @@ Since Excel relationships cannot be created, a single PivotTable for the whole E
   </data>
   <data name="ImportDataBindError" xml:space="preserve">
     <value>An error ocurred trying to bind MySQL data to Excel table {0}.</value>
+  </data>
   <data name="MySQLforExcel_WelcomePanel_Connection_Fabric" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\MySQLforExcel-WelcomePanel-Connection-Fabric.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
