MySQL Bug #73541, Bug #19423952 - EXPORT DATA - DATE TYPE NOT AUTO-DETECTED WHEN LOCALE IS DIFFERENT
- Moved logic from the GetInsertingValueForColumnType method to the new GetValueAsBoolean and GetValueAsDateTime methods to reduce code complexity. Revised and rewrote the logic to handle date values of the new GetValueAsDateTime method. Recreated from scratch the logic of the IsMySqlDateTimeValue method to handle several scenarios. (source\Classes\DataTypeUtilities.cs)
- Added the PrepareCopyingItemArray method that analyzes all data in the array and converts it and escapes it if needed. Modified the logic of the CopyTableData method to do a LoadDataRow instead of an ImportRow to be able to first call the new PrepareCopyingItemArray on the loading data. Simplified 2 MySqlDataTable constructors used for Export and Append operations to use the CopyTableData method instead of loading data rows in different ways, this way code is encapsulated and more maintainable. Removed logic that converted and escaped values to be imported to Excel in the ImportDataIntoExcelRange since that logic is done when loading the data into the MySqlDataTable instead. Added logic to the AddExcelData method to be as similar as possible to the CopyTableData one. (source\Classes\MySqlDataTable.cs)
- Added code to the EditingWorksheet_Change method to handle the case when users enter a 0 into a date field, so it is treated as a DBNull value in the internal MySqlDataTable and reset to an empty value in the Excel cell. This fixes a bug where the zero dates converted to null could not be stored into a DataRow value. (source\Forms\EditDataDialog.cs)
- Changed completely the UnrecognizedBooleanValueException class to be now the ValueNotSuitableForConversionException, which is more general and can be used when converting any data type, not just boolean ones. (source\Classes\Exceptions\ValueNotSuitableForConversionException.cs, source\MySQL.ForExcel.csproj, source\Properties\Resources.resx, source\Prope

--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -897,8 +897,8 @@ Do you want to exit Edit Mode on all Worksheets within the Workbook before savin
   <data name="ConnectionLostErrorText" xml:space="preserve">
     <value>The connection to the MySQL server has been lost or was unexpectedly closed.</value>
   </data>
-  <data name="UnrecognizedBooleanValueError" xml:space="preserve">
-    <value>Unrecognized value suitable for a bool column encountered.</value>
+  <data name="ValueNotSuitableForConversionError" xml:space="preserve">
+    <value>Value '{0}' is not suitable to be converted to a {1} data type.</value>
   </data>
   <data name="StatementExecutionGenericError" xml:space="preserve">
     <value>An unknown error ocurred when trying to apply changes against the connected MySQL server.</value>
