MySQL Bug #73175, Bug #19402572 - SOME COLUMN DATA IS SET TO NULL DURING DB APPEND, EVEN WHEN THE CELLS HAVE DATA
- Fixed some code regarding the AllowNull property that was wrong in the last push and that caused an error importing data that contains null values. Added code to the DetectMySqlDataType method to only assign a VarChar(255) type to a column with no data at all in Export Data operations, but not Append ones, this in order to fix a bug in automatic mappings where a source column contains no data. (source\Classes\MySQLDataColumn.cs)
- Modified a MySqlDataTable constructor used in Export and Append data operations to detect which of the 2 operations is being performed and assign the OperationType accordingly, also assigned the IsPreviewTable property to true since it was being assigned outside the constructor in both Export and Append data code. (source\Classes\MySQLDataTable.cs, source\Forms\AppendDataForm.cs, source\Forms\ExportDataForm.cs)
- Removed the restriction of skipping empty columns in the TempRange constructor used for Append Data operations to fix a problem with automatic mappings where columns are matched 1:1 using their column positions. Removed a validation in the CreateMappedTempRange that was not needed and was actually causing the problem in the reported bug. (source\Classes\TempRange.cs, source\Forms\AppendDataForm.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
 1.3.3
+- Changed the way columns without any data that are inside the selected Excel range are treated during an Export or Append data operation, in version 1.2.1 we dismissed
+  any columns without data, now if the columns with no data exist between other columns that contain data they are considered as valid for Export or Append. Fixed a bug
+  in the code that prepares the data for Append when the mapped columns are less than the total number of columns in the target table.
+  (MySQL Bug #73175, Bug #19402572 - SOME COLUMN DATA IS SET TO NULL DURING DB APPEND, EVEN WHEN THE CELLS HAVE DATA)
 - Fixed code that sets column properties on an Export Data operation so the properties are carried over to the generated SQL script.
   (MySQL Bug #73646, Bug #19467535 - EXPORT DATA - ALLOW EMPTY COLUMN OPTION WORKS ONLY FIRST TIME SQL IS PREVIEWED)
 - Fixed code that sets columns properties dependant on their detected data types when an Export Data operation loads the Excel data.
