--- a/CHANGES
+++ b/CHANGES
@@ -20,6 +20,8 @@
   (MySQL Bug #73712, Bug #19501346 - DATA TYPE INCONSISTENCIES BETWEEN VARCHAR (OLD) AND VARCHAR (NEW))
 
 1.3.2
+- Fixed MySqlDataTable constructor to include the SQL query to create the schema correctly in order to import only the selected columns into Excel instead of all of them.
+  (MySQL Bug #73247, Bug #19181877 IMPORT DATA - EMPTY COLUMNS CREATED INCORRECTLY FOR COLUMNS NOT IN SELECTION)
 - Added a new global option called "Preview MySQL table data before an Edit Data session is opened" that when checked, the data of a selected MySQL table to be edited
   is shown in a preview dialog before the Edit Data session is opened. If the option is unchecked, no preview takes place and the Edit Data session is opened directly.
 - Added a new context menu option called "Preview Data" available when right-clicking a MySQL table or view listed in the DB Objects selection panel. The option opens
