--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 1.3.3
+- Rows involved in a commit action during Edit Data operations are refreshed from the database after the transaction is committed, so values that are modified at the
+  server side (autoincrement fields, timestamps, or others by stored procedures) are returned to Excel after the push. This avoids the generation of optimistic update
+  warnings stating the data has been changed outside the Edit Data session. (Bug #18142293 - CELLS WOULD TURN ORANGE AT INAPPROPRIATE TIMES)
 - Added code to convert TimeSpan values from the database into Excel's time values to avoid type errors while importing to a range (when Create Excel Table option is not
   selected in Advanced Options). (MySQL Bug #72504, Bug #18693067 - MYSQL FOR EXCEL NOT IMPORTING TIME COLUMNS)
 - Fixed the code that pre-processes data for Export or Append operations to copy the Excel range's values and number formats instead of copying their formulas into a
