--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 1.3.3
+- Fixed code to show the SQL Script Preview dialog on Edit Data operations when the "Preview SQL statements before they are sent to the server" global option is on and
+  only if the "Auto-Commit" checkbox on the Edit Data dialog is off. (MySQL Bug #73900, Bug #19607260 - EDIT DATA - SQL SCRIPT PREVIEW POPS-UP WHEN AUTO-COMMIT IS ON)
 - Rows involved in a commit action during Edit Data operations are refreshed from the database after the transaction is committed, so values that are modified at the
   server side (autoincrement fields, timestamps, or others by stored procedures) are returned to Excel after the push. This avoids the generation of optimistic update
   warnings stating the data has been changed outside the Edit Data session. (Bug #18142293 - CELLS WOULD TURN ORANGE AT INAPPROPRIATE TIMES)
