--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 1.3.3
+- Added an explicit conversion for Excel cells containing time values (stored internally as decimal numbers formatted as a time) to TimeSpan objects in .NET so these
+  values are recognized in the Export Data dialog as time values to be exported to TIME columns in a new MySQL table. Fixed the code that assembles the INSERT SQL
+  queries used to push data to a MySQL DB to wrap time values in single quotes. (MySQL Bug #73899, Bug #19607195 - ERRORS EXPORTING DATA TO TIME COLUMNS IN A NEW TABLE)
 - Fixed code to show the SQL Script Preview dialog on Edit Data operations when the "Preview SQL statements before they are sent to the server" global option is on and
   only if the "Auto-Commit" checkbox on the Edit Data dialog is off. (MySQL Bug #73900, Bug #19607260 - EDIT DATA - SQL SCRIPT PREVIEW POPS-UP WHEN AUTO-COMMIT IS ON)
 - Rows involved in a commit action during Edit Data operations are refreshed from the database after the transaction is committed, so values that are modified at the
