MySQL Bug #73866, Bug #19588933 MYSQL FOR EXCEL ERROR WHILE IMPORTING AT WORKSHEET BOTTOM
- Improved handling of Worksheet space to honor both row and column limits to avoid high severity errors while importing data into Excel.
  - Created ColumnsExceedWorksheetLimitmethod at ExcelUtilities class to enable us to count the columns, to know how much column space the importing data will require to the right of the current cursor location.
  - Imlemented ColumnsExceedWorksheetLimit at DbView class to indicate the case where the importing data exceeds the Woksheet's available space to the right and handle it in a similar fashion as when the import data range collides with an existing ListObject.
  - Created SafeResize method at ExcelUtilities to avoid high severity errors created by range resize calls with invalid dimensions, ensuring valid limits are never surpassed and replaced every old Range.Resize() method call (13 calls in the whole solution) in favor of this new method. this also affects ImportConnectionInfo, MySQLDataTable, TempRange
  - Created RowsExceedWorksheetLimitmethod at ExcelUtilities class to enable us to count the rows, to know how much row space the importing data will require to the right of the current cursor location.
  - Created new fields _importIsCappedByRows, _atRow and _activeWorkbookMaxRoNumber at ImportTableViewForm class to handle capping data logic. Deleted _workbookInCompatibilityMode field as it was proven useless for the new paradigm.
  - Created new Method RecalculateRowsToMaximum at ImportTableViewForm class to allow responsive GUI limitation to the number of rows the user can import o the current Worksheet, this Fixed RowTo numericupdown limit settings to continue working well at Worksheet bottom and right edges, always displaying the correct maximum available value, being aware of options other options that may affect this maximum value.
  - Added additional validation to ImportData method at ImportTableViewForm class required when 

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 1.3.3
+- Improved handling of Worksheet space to honor both row and column limits to avoid high severity errors while importing data into Excel.
+  (MySQL Bug #73866, Bug #19588933 - MYSQL FOR EXCEL ERROR WHILE IMPORTING AT WORKSHEET BOTTOM)
 - Added an explicit conversion for Excel cells containing time values (stored internally as decimal numbers formatted as a time) to TimeSpan objects in .NET so these
   values are recognized in the Export Data dialog as time values to be exported to TIME columns in a new MySQL table. Fixed the code that assembles the INSERT SQL
   queries used to push data to a MySQL DB to wrap time values in single quotes. (MySQL Bug #73899, Bug #19607195 - ERRORS EXPORTING DATA TO TIME COLUMNS IN A NEW TABLE)
