MySQL Bug #73911, Bug #19639669 - SOME TABLES CAN NOT BE EDITED CORRECTLY
- Updated the MySQL.Utility DLL with the latest one. (source\libraries\MySQL.Utility.dll)
- Created MySqlColumnsInformationTable class to have a standarized DataTable containing schema information for MySQL columns. (source\Classes\MySqlColumnsInformationTable.cs, source\MySQL.ForExcel.csproj)
- Moved extended methods for the MySqlWorkbenchConnection class that return general information (like GetSchemaCollection) and all related to character sets and collations from to the MySqlWorkbenchConnection class in the MySQL.Utility. Created the GetColumnsInformationTable (that replaced the GetColumnsSchemaInfo one) that returns columns information in a MySqlColumnsInformationTable. Added the IsUnicodeCharSetOrCollation method that checks if a collation or character set is a Unicode one according to MySQL. (source\Classes\MySQLDataUtilities.cs, source\Classes\MySqlDataView.cs)
- Added CharSet and Collation properties to the MySqlDataColumn and MySqlDataTable classes, also subscribe to property change events for its parent MySqlDataTable so in case the CharSet and Collation change on the parent, they also change in the child column. These properties are filled automatically when a MySqlDataTable is created from a corresponding MySQL table. (source\Classes\MySqlDataColumn, source\Classes\MySqlDataTable.cs).
- Split the code in the GetSqlForModifiedRow and moved the logic related to optimistic updates to the new GetSqlForModifiedRowUsingOptimisticConcurrency method. Optimized the construction of WHERE clauses with optimistic updates and TEXT columns to use user variables to store the old column values referenced in the WHERE clause to save query text space in the GetSqlForModifiedRowUsingOptimisticConcurrency method. (source\Classes\MySqlDataRow.cs)
- Fixed code in the CreateOriginalStatementsList method that was overflowing the capacity of the StringBuilder being used to assemble the whole SQL text that

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,9 @@
 1.3.3
+- Fixed some bugs related to the way SQL queries are assembled during an Edit Data session and to text values. One of the problems was related to memory allocation for
+  the query text overflowing when many TEXT columns were present in the table. Another problem was related to text values used in the WHERE clause of UPDATE queries were
+  not being properly escaped, this was only happening when optimistic updates were being used. Optimized the construction of WHERE clauses with optimistic updates and
+  TEXT columns to use user variables to store the old column values referenced in the WHERE clause to save query text space.
+  (MySQL Bug #73911, Bug #19639669 - SOME TABLES CAN NOT BE EDITED CORRECTLY)
 - Added logic to allow changes made by the user at Append Advanced Options dialog to be discarded if cancel is pressed.
   (Bug #16501859 - APPEND DATA - STORED MAPPINGS ARE RENAMED OR DELETED EVEN WHEN CANCELLING)
 - Improved handling of Worksheet space to honor both row and column limits to avoid high severity errors while importing data into Excel.
