MySQL Bug #74057, Bug #19680607 - SEMICOLONS USED IN VALUES CAUSE PROBLEMS IN QUERIES SENT TO MYSQL SERVER
- Updated the MySQL.Utility.dll with the latest version that contains the MySqlTokenizer class. (source\libraries\MySQL.Utility.dll)
- Added the SplitInSqlStatements method to the MySqlDataUtilities class to split a SQL script string into its component statements. (source\Classes\MySQLDataUtilities.cs)
- Added a new output parameter to the GetSql method that contains an optional statement that sets user variables needed by the main SQL statement returned by the method. (source\Interfaces\IMySqlDataRow.cs, source\Classes\MySqlDummyRow.cs, source\Classes\MySqlDataRow.cs)
- Added constants and code to recognize SET statements to the SqlStatementType enumeration and GetSqlStatementType method. Added the SetVariablesSqlQuery property that contains an optional statement that sets user variables needed by the main SQL statement stored in the SqlQuery property. Added code to the Execute method to execute first the SetVariablesSqlQuery if it exists before the SqlQuery. (source\Classes\MySqlStatement.cs)
- Added code to the CreateActualStatementsList and CreateOriginalStatementsList to split SQL text in statements using the new SplitInSqlStatements extension method and to honor any optional SET statement that assigns user variables needed by the main statements. (source\Forms\MySqlScriptDialog.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 1.3.3
+- Fixed the way a previewed SQL script is split into individual SQL statements using a tokenizer that detects each type of token within the script text, so now the
+  delimiters for SQL statements are detected correctly. (MySQL Bug #74057, Bug #19680607 - SEMICOLONS USED IN VALUES CAUSE PROBLEMS IN QUERIES SENT TO MYSQL SERVER)
 - Fixed some bugs related to the way SQL queries are assembled during an Edit Data session and to text values. One of the problems was related to memory allocation for
   the query text overflowing when many TEXT columns were present in the table. Another problem was related to text values used in the WHERE clause of UPDATE queries were
   not being properly escaped, this was only happening when optimistic updates were being used. Optimized the construction of WHERE clauses with optimistic updates and
