MySQL Bug #73911, Bug #19639669 - SOME TABLES CAN NOT BE EDITED CORRECTLY
- Added a new parameter to the GetWhereClauseFromPrimaryKey method to use the DataRowVersion.Original of a MySqlDataRow in the case we are building the where clause of an Update or Delete statement, but use the DataRowVersion.Current for refreshing its data. (source\Classes\MySqlDataRow.cs)
- Added a resource string to throw an exception (meant for developers) when the DataRowVersion.Original is used and it does not exist. (source\Properties\Resources.Designer.cs, source\Properties\Resources.resx)

--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -1092,4 +1092,7 @@ Since Excel relationships cannot be created, a single PivotTable for the whole E
   <data name="SqlScriptTooBigErrorDetail" xml:space="preserve">
     <value>There is not enough contiguous memory segment that can hold the SQL text being generated.</value>
   </data>
+  <data name="OriginalRowVersionNotFoundErrorText" xml:space="preserve">
+    <value>The DataRowVersion.Original does not exist for the current data row and must not be used to build a SQL query. Please report this as a bug.</value>
+  </data>
 </root>
