--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+1.3.4
+- Fixed a bug that occurred during the preparation of data to be exported to a new table, when the number of rows to be exported was higher than the number of previewed
+  rows, the Export Data operation was restricted to the number of previewed rows. (MySQL Bug #74942, Bug #20077608 - EXPORT ROWS ARE LIMITED BY NUMBER OF REVIEW ROWS)
+
 1.3.3
 - Fixed a problem in the MySQL for Excel MSI that was not replacing the registry keys on an upgrade (i.e. registry keys from previous versions remained and were not
   upgraded) which caused the add-in to not work at all. (MySQL Bug #74286, Bug #19783949 - UPGRADING MYSQL FOR EXCEL FAILS FOR ALL VERSIONS SINCE 1.2.1)
