MYSQLEXCEL-154 - UNABLE TO DELETE CONNECTION INFORMATION
- Renamed the ManageSessionsDialog.cs related files to ManageConnectionInfoDialogs to be consistent with the class name. (source\Forms\ManageConnectionInfoDialogs.cs, source\Forms\ManageConnectionInfoDialogs.Designer.cs, source\Forms\ManageConnectionInfoDialogs.resx, source\MySQL.ForExcel.csproj)
- Fixed code to delete connection information entries selected in the "Manage Import/Edit Connections Information" dialog when the "Accept" button is pressed. Changed code to retain the instance of the ManageConnectionInfoDialog object until the GlobalOptionsDialog itself is disposed of. This in order to avoid destroying and recreating the dialog many times. (source\Forms\GlobalOptionsDialog.cs, source\Forms\GlobalOptionsDialog.Designer.cs)
- Renamed the "Delete Connections" button to "Accept" to reflect the fact that connection information entries are NOT deleted until the "Accept" button on the "Global Options" dialog is pressed. Added code to track connections to delete, and more importantly only track changes done to the "Manage Import/Edit Connections Information" dialog if the "Accept" button is pressed.  Added 2 new options related to removing saved connection information: "Delete automatically connection information where Workbook is no longer found." and "Select connection information entries that have not been accessed in the last XX days". These options aid the user to remove old and unused connection information. (source\Forms\ManageConnectionInfoDialogs.cs, source\Properties\Settings.Designer.cs, source\Properties\Settings.settings, source\app.config)
- Added resource strings to log information about the automatic deletion of connection information related to non-existent Excel Workbooks. (source\Properties\Resources.Designer.cs, source\Properties\Resources.resx)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
 1.3.4
+- Fixed a problem that was preventing connection information entries from being deleted. Added a couple of options, related to the deletion of connection information
+  entries, to the "Manage Import/Edit connection information maintenance" dialog accessed within the "Global Options" dialog. One is used to automatically remove stored
+  connection information related to Excel Workbooks that are no longer found where they were originally saved. The second option is used to select all connection
+  information entries that have not been used in the last XX days, so they can be deleted. (MySQL Bug #74304, Bug #19789907 - UNABLE TO DELETE CONNECTION INFORMATION)
 - Fixed a bug that occurred during the preparation of data to be exported to a new table, when the number of rows to be exported was higher than the number of previewed
   rows, the Export Data operation was restricted to the number of previewed rows. (MySQL Bug #74942, Bug #20077608 - EXPORT ROWS ARE LIMITED BY NUMBER OF REVIEW ROWS)
 
