--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -1095,4 +1095,7 @@ Since Excel relationships cannot be created, a single PivotTable for the whole E
   <data name="OriginalRowVersionNotFoundErrorText" xml:space="preserve">
     <value>The DataRowVersion.Original does not exist for the current data row and must not be used to build a SQL query. Please report this as a bug.</value>
   </data>
+  <data name="DeletingConnectionInfosWithNonExistentWorkbook" xml:space="preserve">
+    <value>Deleting automatically saved connection information entries with non-existent Excel Workbooks.</value>
+  </data>
 </root>
