--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 1.3.4
+- Fixed the informational label displaying the number of "inserting" rows during an Export Data operation. Before the fix the number was off by 1, only when the "First
+  row contains column names" option was checked. (MySQL Bug #75342, Bug #20286897 - EXPORT DATA - WRONG NUMBER OF EXPORTING ROWS IN SQL SCRIPT DIALOG)
 - Fixed a problem that was preventing connection information entries from being deleted. Added a couple of options, related to the deletion of connection information
   entries, to the "Manage Import/Edit connection information maintenance" dialog accessed within the "Global Options" dialog. One is used to automatically remove stored
   connection information related to Excel Workbooks that are no longer found where they were originally saved. The second option is used to select all connection
